add in instructions for mac usage

--- a/sqlitebrowser/Dockerfile
+++ b/sqlitebrowser/Dockerfile
@@ -1,14 +1,25 @@
 #
 # SQLite Browser
 #
-# USAGE :
+# USAGE:
 #   docker run -d \
 #     --net host \
 #     -v /tmp/.X11-unix:/tmp/.X11-unix \
-#     -v $HOME/.sqlitebrowser:/root/sqlitebrowser \
+#     -v $HOME/sqlite:/root/sqlite \
 #     -e DISPLAY=unix$DISPLAY \
 #     --name sqlitebrowser \
 #     portiad/sqlitebrowser
+#
+# USAGE MAC:
+# open -a XQuartz
+# socat TCP-LISTEN:6000,reuseaddr,fork UNIX-CLIENT:\"$DISPLAY\"
+#     --net host \
+#     -v ~/sqlite:/root/sqlite \
+## Change DISPLAY to equal VirtualBox IP ADDR for vboxnet0
+#     -e DISPLAY=192.168.##.#:# \
+#     --name sqlitebrowser \
+#     portiad/sqlitebrowser
+
 
 
 FROM ubuntu:latest
